# container-mcp

./: .gitignore  Containerfile  README.md  podman-compose.yml  pyproject.toml  pytest.ini
cmcp/: config.py  main.py  tools.py
cmcp/kb/: __init__.py  document_store.py  models.py  path.py  search.py
cmcp/kb/search/: graph.py  recovery.py  service.py
cmcp/managers/: __init__.py  bash_manager.py  file_manager.py  knowledge_base_manager.py  knowledge_base_manager_v2.py  matlab_manager.py  python_manager.py  web_manager.py
cmcp/tools/: __init__.py  file.py  kb.py  list.py  matlab.py  system.py  web.py
cmcp/utils/: io.py
config/: custom.env  default.env
resources/: AVAILABLE_COMMANDS.txt  COMMANDS_VN.txt  KB_INSTRUCTIONS.md  KB_INSTRUCTIONS.txt  default.env  unrestricted.env
scripts/: list_tools.py
tests/: conftest.py
tests/integration/: test_knowledge_base.py
tests/unit/: test_file_manager.py  test_kb_manager.py  test_kb_path.py  test_kb_search.py  test_matlab_manager.py  test_python_manager.py  test_web_manager.py
tests/unit/search/: test_recovery.py
